basic game setup

--- a/src/app/global/device-list/device-list.component.html
+++ b/src/app/global/device-list/device-list.component.html
@@ -236,7 +236,7 @@
             </div>
             <div class="modal-footer">
                 <button *ngIf="mode == 'activeNodes'" type="button" class="btn btn-danger"
-                    (click)="saveNodeConfigs()">END GAME</button>
+                    (click)="endGame()">END GAME</button>
                     <button *ngIf="mode == 'activeNodes'" type="button" class="btn btn-warning"
                     (click)="saveNodeConfigs()">PAUSE GAME</button>
             </div>
