--- a/src/app/secure/mydevices/mydevices.component.html
+++ b/src/app/secure/mydevices/mydevices.component.html
@@ -16,7 +16,10 @@
                                     <h1>{{teams[0].name}}</h1>
                                 </div>
                                 <div class="col-md-5 text-xs-center text-success p-y-1">
-                                    <h1>78</h1>
+                                    <p *ngFor="let player of teams[0].teamPlayers">
+                                        <a *ngIf="player.is_alive" style="color: green;" >{{player.rfidID}}</a>
+                                        <a *ngIf="!player.is_alive" style="color: red;"  >{{player.rfidID}}</a> 
+                                    </p>
                                 </div> 
                             </div>
                         </div>
@@ -38,7 +41,10 @@
                                     <h1>{{teams[1].name}}</h1>
                                 </div>
                                 <div class="col-md-5 text-xs-center text-success p-y-1">
-                                    <h1>78</h1>
+                                    <p *ngFor="let player of teams[1].teamPlayers">
+                                        <a *ngIf="player.is_alive" style="color: green;" >{{player.rfidID}}</a>
+                                        <a *ngIf="!player.is_alive" style="color: red;"  >{{player.rfidID}}</a> 
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -51,11 +57,14 @@
                 <div class="col-md-12 col-4">
                     <div *ngFor="let team of teams | slice:2; let i = index;" class="card mb-3">
                         <div class="row card card-outline-success m-x-auto m-b-2">
-                            <div class="text-xs-center bg-success p-y-1">
+                            <div class="cust_text text-xs-center bg-success p-y-1">
                                 <h1>{{team.name}}</h1>
                             </div>
                             <div class="col-md-5 text-xs-center text-success p-y-1">
-                                <h1>78</h1>
+                                <p *ngFor="let player of team.teamPlayers">
+                                    <a *ngIf="player.is_alive" style="color: green;" >{{player.rfidID}}</a>
+                                    <a *ngIf="!player.is_alive" style="color: red;"  >{{player.rfidID}}</a> 
+                                </p>
                             </div>
                         </div>
                     </div>
