--- a/src/app/global/header/header.component.html
+++ b/src/app/global/header/header.component.html
@@ -62,10 +62,10 @@
 
             <ul class="navbar-nav mr-auto  mt-2 mt-lg-0" *ngIf="isSecure && isPlayer">
                 <li class="nav-item">
-                    <a class="nav-link" id="secure_nav_mygame" [routerLink]="['/secure/find-game']">Find Games</a>
+                    <a class="nav-link" id="secure_nav_mygame" [routerLink]="['/secure/findGame']">Find Games</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="secure_nav_currentgame" [routerLink]="['/secure/current-game']">Current Games</a>
+                    <a class="nav-link" id="secure_nav_currentgame" [routerLink]="['/secure/currentGame']">Current Games</a>
                 </li>
             </ul>
 
