correct user creation route to match new API method

--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -127,7 +127,7 @@
 							<div class="row">
 								<div id="userCreatedMessage" class="alert alert-primary d-none center-cust">
 								   Your user is created!<br>
-								   Go ahead to <a [routerLink]="['/auth/login']" >login</a>.
+								   <a [routerLink]="['/auth/login']" >LOGIN</a>.
 								</div>
 								<div id="userCreatFaileddMessage" class="alert alert-danger d-none center-cust">
 								   We are sorry we were not able to create your account at this time <br>
@@ -156,8 +156,7 @@
 								</a>
 							</div>
 						</div>
-						<a [routerLink]="['/auth/login']" class="additional-link">Have an Account? <span>Login
-								Now</span></a>
+						<a [routerLink]="['/auth/login']" class="additional-link">Have an Account? <span>LOGIN</span></a>
 					</div>
 				</div>
 			</div>
